Fix icon width on small screens

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,8 +44,8 @@ $title-color: purple;
         display: none!important;
     }
     .back .back-icon {
-        width: 45px!important;
-        height: 20px!important;
+        width: 30px!important;
+        height: 15px!important;
     }
     .back .daytime-list.list.ui {
         padding-left: 0.5em!important;
